# playground

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  GitCommands.md  MODULE.bazel  README.md  WORKSPACE  compile_flags.txt  install_pre_commit.sh  install_zsh.sh  makefile  search_lanes.cpp
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build.yml  build_an_run.yml  build_docker.yml  tests.yml
app/: BUILD  app.cpp  generate_binaries.bzl  moduleTest1.cpp
apps/: BUILD  app.cpp
graph/: BUILD
graph/include/graph/: conjunction.hpp  flip_flop.hpp  module.hpp  node.hpp
graph/src/: node.cpp
graph/tests/: node.test.cpp
include/graph/: node.hpp
src/: node.cpp
